# birei

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: cicd.yml
examples/book/: Cargo.toml  index.html
examples/book/src/: app.rs  book.css  code_example.rs  main.rs
examples/book/src/pages/: action_card_page.rs  button_bar_page.rs  button_menu_page.rs  button_page.rs  card_page.rs  chart_page.rs  checkbox_page.rs  code_editor_page.rs  color_page.rs  command_palette_page.rs  datetime_page.rs  example_app_page.rs  field_page.rs  flexible_columns_page.rs  font_page.rs  icon_page.rs  input_page.rs  label_page.rs  list_page.rs  loading_page.rs  map_page.rs  markdown_page.rs  menu_button_page.rs  mod.rs  notification_page.rs  popup_page.rs  relation_graph_page.rs  select_page.rs  signpad_page.rs  slider_page.rs  table_page.rs  tabs_page.rs  tag_page.rs  textarea_page.rs  timeline_page.rs  tooltip_page.rs  top_menu_page.rs
src/: embed.rs  lib.rs
src/action_card/: action_card.scss  mod.rs  upload.rs  view.rs
src/button/: btn.rs  btn.scss  btn_group.rs  btn_group.scss  btn_types.rs  button.rs  button.scss  button_group.rs  button_types.rs  mod.rs
src/button_bar/: btn_bar.rs  btn_bar.scss  btn_bar_types.rs  mod.rs
src/button_menu/: btn_menu.rs  btn_menu.scss  btn_menu_types.rs  mod.rs
src/card/: crd.rs  crd.scss  mod.rs
src/chart/: chart.scss  chart_types.rs  chart_utils.rs  internal.rs  layout.rs  mod.rs  render.rs  view.rs
src/checkbox/: chk.rs  chk.scss  mod.rs
src/code_editor/: code_editor.scss  completion.rs  editor.rs  history.rs  keyboard.rs  mod.rs  scroll.rs  service.rs  text.rs  types.rs
src/color/: clr.rs  clr.scss  mod.rs
src/command_palette/: cmd_collections.rs  cmd_plt.rs  cmd_plt.scss  cmd_plt_types.rs  mod.rs  tab_commands.rs
src/common/: breakpoint.rs  button_variant.rs  callback.rs  mod.rs  popup.rs  size.rs  value_prop.rs
src/datetime/: dtm.rs  dtm.scss  dtm_types.rs  mod.rs
src/field/: fld.rs  fld.scss  mod.rs
src/flexible_columns/: fcl.rs  fcl.scss  fcl_types.rs  mod.rs
src/icon/: icn.rs  icn.scss  icn_names.rs  icon_types.rs  mod.rs
src/input/: inp.rs  inp.scss  inp_types.rs  mod.rs
styles/: _breakpoints.scss  _mixins.scss  fonts.scss  index.scss  theme.scss
(+91 files in other folders)
