[package]
name = "birei-book"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
birei = { path = "../..", features = ["embedded"] }
jiff = "0.2"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
uuid = "1"
web-sys = { version = "0.3", features = ["File", "HtmlInputElement", "HtmlTextAreaElement", "Url", "Window"] }
